# wspr

./: .gitignore  README  devel.html  wspr_3.0-0.dsc  wspr_3.0-0_i386.changes  wspr_3.0-0_i386.deb
database/query/: html.html  maidenhead-latlon.pl  query.pl  spotquery?edit-count=10
wspr-2.00r1714/debian/: control
wspr-2.11/: AUTHORS  Makefile  Makefile.in  NEWS  README  config.h  config.status  configure  configure.ac
wspr-2.11/autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
wspr-2.11/debian/: control  files
wspr-3.0/: .config.h.swp  .configure.ac.swp  COPYING  INSTALL  Makefile  Makefile.MinGW  Makefile.am  Makefile.in  THANKS  WSPR.INI  Wspr_Howto_MacOSX_10.6.html  aclocal.m4  acom1.f90  autogen.sh  ccf  chklevel.f90  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.ac.1  decode.f90  getfile.f90  start_threads.c  wspr0_tx.f90
wspr-3.0/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
wspr-3.0/debian/: changelog  control
wspr-3.0/debian/tmp/DEBIAN/: control  md5sums
wspr-3.0/m4/: bind.m4  build.m4  debug.m4  docs.m4  fltk.m4  funcs.m4  libintl.m4  macosx.m4  np-compat.m4  opt.m4  oss.m4  pkg-config.m4  progs.m4  static.m4  tls.m4  win32.m4  xmlrpc.m4
wspr-3.0/mac_osx/wspr-patches/: options.py.patch  padevsub.c.patch  wspr.py.patch
wspr-3.0/src/: .Makefile.in.swp  .Makefile.swp  .fthread.c.swp  .gmtime2.c.swp  .nhash.c.swp  .padevsub.c.swp  .playsound.c.swp  .ptt.c.swp  .ptt_unix.c.swp  .resample.c.swp  .setup.py.swp  .sound.c.swp  .start_threads.c.swp  Makefile  Makefile.in  WSPR.INI  WSPR.iss  audio_caps  ccf  config.status  fcal  fmeasure  fmt  fmtave  four2.f  fthread.c  g1.bat  g2.bat  genmept.f  genwspr.f90  getrms.f  getsound.c  gmtime2.c  hftoa  mept162.f  mix162.f  nhash.c  padevsub.c  playsound.c  ptt.c  (+16 more)
wspr-3.0/src/WsprMod/: Pmw.pyo  PmwBlt.pyo  PmwColor.pyo  __init__.pyo  advanced.pyo  g.pyo  hopping.pyo  iq.pyo  options.py  options.pyo  palettes.pyo  smeter.pyo
wspr-3.0/src/WsprModNoGui/: options.py
wspr-3.0/src/autom4te.cache/: output.0  traces.0
wspr/.svn/: wc.db
